# icos-fl

./: CHANGELOG.md  MANIFEST.in  requirements.txt  setup.cfg  setup.py  tox.ini
conf/: client.yml  server.yml
docs/source/: conf.py
icos_fl/client/: client.py
icos_fl/data/: fetcher.py  processor.py
icos_fl/models/: lstm.py
icos_fl/server/: server.py
icos_fl/utils/: argparser.py  colors.py  configfetcher.py  logger.py  logo.py  singleton.py
tests/: test_argparser.py  test_configfetcher.py  test_data_fetcher.py  test_logger.py  test_logo.py  test_lstm.py  test_processor.py
