[metadata]
name = icos_fl
version = file: VERSION
description = ICOS Federated Learning Framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Anastasios Kaltakis
author_email = anastasioskaltakis@gmail.com
url = https://github.com/anaskalt/icos-fl
license = MIT
keywords = federated learning, flower, machine learning
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.12
zip_safe = False

[options.entry_points]
console_scripts =
    icos-fl-server = icos_fl.server.server:main
    icos-fl-client = icos_fl.client.client:main

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/,*.pyc,*.egg-info,.eggs